# otus_6

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  matrix.h
tests/: test_matrix.cpp
